@@ -1,11 +1,11 @@
 package com.nickrobison.tuple.codegen;
 
-import org.codehaus.commons.compiler.CompileException;
-import org.codehaus.janino.Java;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+
+import org.codehaus.commons.compiler.CompileException;
+import org.codehaus.janino.Java;
 
 /**
  * Created by cliff on 5/9/14.
@@ -20,15 +20,10 @@ public class HeapTupleCodeGenerator extends TupleCodeGenerator {
     protected Java.FieldDeclaration[] generateFields() {
         Java.FieldDeclaration[] declarations = new Java.FieldDeclaration[fieldTypes.length];
         for (int i = 0; i < fieldTypes.length; i++) {
-            declarations[i] = new Java.FieldDeclaration(
-                    loc,
-                    null,
-                    new Java.AccessModifier[]{new Java.AccessModifier("public", loc)},
+            declarations[i] = new Java.FieldDeclaration(loc, null,
+                    new Java.AccessModifier[] { new Java.AccessModifier("public", loc) },
                     classToType(loc, fieldTypes[i]),
-                    new Java.VariableDeclarator[]{
-                            new Java.VariableDeclarator(loc, fieldNames[i], 0, null)
-                    }
-            );
+                    new Java.VariableDeclarator[] { new Java.VariableDeclarator(loc, fieldNames[i], 0, null) });
         }
 
         return declarations;
@@ -38,14 +33,9 @@ public class HeapTupleCodeGenerator extends TupleCodeGenerator {
     protected List<Java.SwitchStatement.SwitchBlockStatementGroup> generateIndexedGetterImpl() {
         List<Java.SwitchStatement.SwitchBlockStatementGroup> list = new ArrayList<>();
         for (int i = 0; i < fieldTypes.length; i++) {
-            list.add(
-                    new Java.SwitchStatement.SwitchBlockStatementGroup(
-                            loc,
-                            Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))),
-                            false,
-                            Collections.singletonList(new Java.ReturnStatement(loc, generateGetInvocation(fieldTypes[i], i)))
-                    )
-            );
+            list.add(new Java.SwitchStatement.SwitchBlockStatementGroup(loc,
+                    Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))), false,
+                    Collections.singletonList(new Java.ReturnStatement(loc, generateGetInvocation(fieldTypes[i], i)))));
         }
         list.add(generateDefaultCase());
         return list;
@@ -58,57 +48,40 @@ public class HeapTupleCodeGenerator extends TupleCodeGenerator {
             if (!type.equals(fieldTypes[i])) {
                 continue;
             }
-            list.add(
-                    new Java.SwitchStatement.SwitchBlockStatementGroup(
-                            loc,
-                            Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))),
-                            false,
-                            Collections.singletonList(new Java.ReturnStatement(loc, generateGetInvocation(fieldTypes[i], i)))
-                    )
-            );
+            list.add(new Java.SwitchStatement.SwitchBlockStatementGroup(loc,
+                    Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))), false,
+                    Collections.singletonList(new Java.ReturnStatement(loc, generateGetInvocation(fieldTypes[i], i)))));
         }
         list.add(generateDefaultCase());
         return list;
     }
 
     @Override
-    protected List<Java.SwitchStatement.SwitchBlockStatementGroup> generateIndexedSetterImpl(String value) throws CompileException {
+    protected List<Java.SwitchStatement.SwitchBlockStatementGroup> generateIndexedSetterImpl(String value)
+            throws CompileException {
         List<Java.SwitchStatement.SwitchBlockStatementGroup> list = new ArrayList<>();
         for (int i = 0; i < fieldTypes.length; i++) {
-            list.add(
-                    new Java.SwitchStatement.SwitchBlockStatementGroup(
-                            loc,
-                            Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))),
-                            false,
-                            List.of(
-                                    new Java.ExpressionStatement(generateSetInvocation(fieldTypes[i], i, value)),
-                                    new Java.BreakStatement(loc, null)
-                            )
-                    )
-            );
+            list.add(new Java.SwitchStatement.SwitchBlockStatementGroup(loc,
+                    Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))), false,
+                    List.of(new Java.ExpressionStatement(generateSetInvocation(fieldTypes[i], i, value)),
+                            new Java.BreakStatement(loc, null))));
         }
         list.add(generateDefaultCase());
         return list;
     }
 
     @Override
-    protected List<Java.SwitchStatement.SwitchBlockStatementGroup> generateIndexedSetterImpl(String value, Class<?> type) throws CompileException {
+    protected List<Java.SwitchStatement.SwitchBlockStatementGroup> generateIndexedSetterImpl(String value,
+            Class<?> type) throws CompileException {
         List<Java.SwitchStatement.SwitchBlockStatementGroup> list = new ArrayList<>();
         for (int i = 0; i < fieldTypes.length; i++) {
             if (!type.equals(fieldTypes[i])) {
                 continue;
             }
-            list.add(
-                    new Java.SwitchStatement.SwitchBlockStatementGroup(
-                            loc,
-                            Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))),
-                            false,
-                            List.of(
-                                    new Java.ExpressionStatement(generateSetInvocation(fieldTypes[i], i, value)),
-                                    new Java.BreakStatement(loc, null)
-                            )
-                    )
-            );
+            list.add(new Java.SwitchStatement.SwitchBlockStatementGroup(loc,
+                    Collections.singletonList(new Java.IntegerLiteral(loc, String.valueOf(i + 1))), false,
+                    List.of(new Java.ExpressionStatement(generateSetInvocation(fieldTypes[i], i, value)),
+                            new Java.BreakStatement(loc, null))));
         }
         list.add(generateDefaultCase());
         return list;
@@ -121,7 +94,8 @@ public class HeapTupleCodeGenerator extends TupleCodeGenerator {
 
     @Override
     protected Java.Rvalue generateSetInvocation(Class<?> type, int index, String value) {
-        return new Java.Assignment(loc, new Java.FieldAccessExpression(loc, new Java.ThisReference(loc), fieldNames[index]), "=",
-                new Java.Cast(loc, classToRefType(fieldTypes[index]), new Java.AmbiguousName(loc, new String[]{value})));
+        return new Java.Assignment(loc,
+                new Java.FieldAccessExpression(loc, new Java.ThisReference(loc), fieldNames[index]), "=", new Java.Cast(
+                        loc, classToRefType(fieldTypes[index]), new Java.AmbiguousName(loc, new String[] { value })));
     }
 }
